--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -7,7 +7,7 @@ header {
     @include breakpoints(mobile) {
       & { 
         flex-wrap: wrap; 
-        justify-content: center;
+        justify-content: center;  
       }
     }
   }
@@ -18,7 +18,10 @@ header {
     border-right: 1px solid #6B6B69;
 
     @include breakpoints(mobile) {
-      & { border-right: none; }
+      & { 
+        border-right: none;
+        flex-basis: 50%;
+       }
     }
   }
 
@@ -39,14 +42,23 @@ header {
 
     @include breakpoints(mobile) {
       & { 
+        padding-left: 0;
+        margin: 0 auto;
+        flex-basis: auto;
         order: 3;
-        flex-grow: 1;
       }
     }
   }
   
   @at-root 
-  .search-container { flex-grow: 1;}
+  .search-container { 
+    flex-grow: 1;
+
+    @include breakpoints(mobile) {
+      width: 200px;
+      flex-grow: initial;
+    }
+  }
 
   @at-root 
   #search-field {
@@ -93,7 +105,8 @@ header {
     @include breakpoints(mobile) {
       &::before {
         bottom: 9px;
-        left: 36px;
+        left: 0;
+        transform: translateX(-25%);
       }
     }
   }
